make the website view animated using scrollrevel

--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ flex-wrap: wrap;
 align-items: center;
 gap: 7rem;
 position: absolute;
-bottom: rem;
+bottom: 5rem;
 left: 100px;
 background: #fff;
 padding: 20px;
