--- a/Client/rentcar.css
+++ b/Client/rentcar.css
@@ -6,29 +6,75 @@ body {
     margin: 0;
     background-color: #f0f0f0;
 }
+.back-icon {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-size: 50px;
+    color: #333;
+    cursor: pointer;
+    text-decoration: none;
+}
 
-.grid-container {
+/* .back-icon {
+    position: absolute;
+    top: 50px;
+    left: 400px;
+    font-size: 50px;
+    color: #333;
+    cursor: pointer;
+    text-decoration: none;
+} */
+/* .grid-container {
+    margin-top: px;
+    position: relative;
+    height: 90vh; 
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    overflow-y: auto;
+    padding: 16px;
+    box-sizing: border-box;
+    border: #474fa0;
+    background-color: red;
+  } */
+/* .grid-container {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    gap: 16px; /* Adjust the gap between items as needed */
+    gap: 16px; 
     padding: 10px;
     border: 2px solid blue;
     box-sizing: border-box;
-    width: 90%; /* Adjust the width as needed */
+    width: 90%; 
+} */
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); 
+    grid-gap: 16px; 
+    height: 90vh; 
+    width: 90vw;
+    overflow-y: auto; 
+    padding: 16px; 
+    box-sizing: border-box; 
 }
 
 .box {
     border: 1px solid #ccc;
+    flex: 1 1 calc(25% - 32px);
     padding: 16px;
     text-align: center;
     background-color: #f9f9f9;
     border-radius: 1rem;
     box-shadow: 1px 4px 41px rgba(0, 0, 0, 0.1);
+    height: 30vh;
+    max-width: 20vw;
 }
 
 .box-image {
     width: 100%;
-    height: 200px;
+    height: 400px;
     overflow: hidden;
     border-radius: 1rem;
 }
@@ -59,6 +105,7 @@ body {
 
 .box .btn {
     display: flex;
+    height: 35px;
     justify-content: center;
     background: #474fa0;
     color: #fff;
