--- a/Client/admin.css
+++ b/Client/admin.css
@@ -9,6 +9,16 @@ body {
     height: 100vh;
 }
 
+.back-icon {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-size: 50px;
+    color: white;
+    cursor: pointer;
+    text-decoration: none;
+}
+
 .container {
     display: flex;
     gap: 50px;
