add path for myaccount for user | changed minor grammer in order js

--- a/Client/admin.css
+++ b/Client/admin.css
@@ -97,3 +97,12 @@ body {
     border: none;
     border-radius: 20px;
 }
+
+.updatebtn{
+    position: absolute;
+    margin-left: 55vw;
+    margin-top: -25vh;
+    font-size: 80px;
+    border: none;
+    border-radius: 20px;
+}
