--- a/Client/update.css
+++ b/Client/update.css
@@ -12,6 +12,8 @@
     text-decoration: none;
 }
 
+
+
 .main {
     position: absolute;
     top: 50%;
@@ -42,6 +44,7 @@
 
 /* changing divs */
 .picture {
+    
     position: absolute;
     top: 50%;
     left: 50%;
@@ -97,4 +100,44 @@
     top: 10px;
     right: 10px;
     cursor: pointer;
+}
+
+
+/* for the inpput field to update post */
+
+.updated-photo{
+    position: absolute;
+    top: 45%;
+    left: 40%;
+    height: 50px;
+    
+    
+}
+
+.updated-price{
+    position: absolute;
+    top: 45%;
+    left: 34%;
+    width: 15vw;
+    height: 5vh;
+    font-size: 2vh;
+    border-radius: 1vh;
+}
+
+.updated-name{
+    position: absolute;
+    top: 45%;
+    left: 34%;
+    width: 15vw;
+    height: 5vh;
+    font-size: 2vh;
+    border-radius: 1vh;
+}
+
+.photo-submit,.number-submit,.modelname-submit{
+    position: absolute;
+    top: 70%;
+    left: 44%;
+    width: 6vw;
+    height: 4vh;
 }
